compositing_shaders: Add "Shader texture" idea, "Usage examples" plan, bibliography.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8250 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/Makefile
+++ b/compositing_shaders/Makefile
@@ -7,8 +7,8 @@ rebuild: clean compositing_shaders.pdf
 	pdflatex -file-line-error -interaction=nonstopmode compositing_shaders.tex
 
 compositing_shaders.pdf: compositing_shaders.tex
-#	pdflatex -file-line-error -interaction=nonstopmode compositing_shaders.tex
-#	bibtex compositing_shaders
+	pdflatex -file-line-error -interaction=nonstopmode compositing_shaders.tex
+	bibtex compositing_shaders
 	pdflatex -file-line-error -interaction=nonstopmode compositing_shaders.tex
 	pdflatex -file-line-error -interaction=nonstopmode compositing_shaders.tex
 
