Add "make zip" to prepare for submission of the "Final LaTeX sources".
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9477 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/Makefile
+++ b/compositing_shaders/Makefile
@@ -28,3 +28,13 @@ clean:
 screenshots_targz:
 	rm -f compositing_shaders_screenshots.tar.gz
 	tar czvf compositing_shaders_screenshots.tar.gz *.png
+
+# make zip for submission of the "Final LaTeX sources"
+.PHONY: zip
+zip:
+	rm -f compositing_shaders_src.zip
+	zip compositing_shaders_src.zip \
+	   $(shell find -maxdepth 1 -name '*.png') \
+	   compositing_shaders.bib \
+	   compositing_shaders.tex \
+	   Makefile README.txt
