Let "make clean" clean also zip.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9478 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/Makefile
+++ b/compositing_shaders/Makefile
@@ -21,7 +21,8 @@ clean:
 	      compositing_shaders.bbl \
 	      compositing_shaders.blg \
 	      compositing_shaders.dvi \
-	      compositing_shaders.ps
+	      compositing_shaders.ps \
+	      compositing_shaders.zip
 
 # make screenshots_targz, to submit screenshots as PNG
 .PHONY: screenshots_targz
