Convert math formula to MathML, then SVG and PNG for output.
Also, update version to DocBook 4.5 (although not needed after all, I thought I want <mathphrase> but I don't need it; but 4.5 is harmless).


git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10283 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -11,7 +11,9 @@ html_post = mkdir -p $(1)admonitions/ && \
         $(1)admonitions/ && \
   cp -f $(BASE_DOCUMENT_NAME).css $(1) && \
   rm -Rf $(1)images/ && \
-  cp -Rf images/html $(1)images
+  cp -Rf images/html $(1)images && \
+  mkdir -p $(1)formulas/ && \
+  cp -Rf formulas/*.png $(1)formulas/
 
 .PHONY: default
 default: validate-xmllint html pdf
