Add script to upload stuff on SF.
Fix html/images/ copying: we were mistakenly copying too much, like .svn subdir.


git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10287 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -10,12 +10,29 @@ html_post = mkdir -p $(1)admonitions/ && \
         /usr/share/xml/docbook/stylesheet/nwalsh/images/*.gif \
         $(1)admonitions/ && \
   cp -f $(BASE_DOCUMENT_NAME).css $(1) && \
-  rm -Rf $(1)images/ && \
-  cp -Rf images/html $(1)images && \
+  mkdir -p $(1)images/ && \
+  cp -f images/html/*.png $(1)images/ && \
   mkdir -p $(1)formulas/ && \
-  cp -Rf formulas/*.png $(1)formulas/
+  cp -f formulas/*.png $(1)formulas/
 
 .PHONY: default
 default: validate-xmllint html pdf
 
 include ../../vrml_engine_doc/Makefile-docbook
+
+# upload ---------------------------------------------------------------------
+
+SF_USERNAME=kambi
+SF_HOST=web.sourceforge.net
+SF_PATH=/home/project-web/castle-engine/htdocs/compositing_shaders_doc/
+
+SF_CONNECT=$(SF_USERNAME),castle-engine@$(SF_HOST):$(SF_PATH)
+SCP_OPTIONS=
+
+# Prepare and upload our output under
+# [http://castle-engine.sourceforge.net/compositing_shaders_doc/].
+.PHONY: upload
+upload: clean default
+	cd output/xsl/ && tar czvf ../../output.tar.gz *
+	scp $(SCP_OPTIONS) output.tar.gz $(SF_CONNECT)
+	./sf_upload_finalize.sh $(SF_USERNAME) $(SF_PATH)
