Better "make upload", clean after yourself.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10316 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -36,3 +36,4 @@ upload: clean default
 	cd output/xsl/ && tar czvf ../../output.tar.gz *
 	scp $(SCP_OPTIONS) output.tar.gz $(SF_CONNECT)
 	./sf_upload_finalize.sh $(SF_USERNAME) $(SF_PATH)
+	rm -f output.tar.gz
