Final part of the pseudo-code nicer: just split it into many parts, and put normal text inside.
Also, callouts turned out to be nice to explain the light shader application.


git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10321 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -9,6 +9,10 @@ html_post = mkdir -p $(1)admonitions/ && \
   cp -f /usr/share/xml/docbook/stylesheet/nwalsh/images/*.png \
         /usr/share/xml/docbook/stylesheet/nwalsh/images/*.gif \
         $(1)admonitions/ && \
+  mkdir -p $(1)images/callouts/ && \
+  cp -f /usr/share/xml/docbook/stylesheet/nwalsh/images/callouts/*.png \
+    $(1)images/callouts/ && \
+  cp -f images/html/*.png $(1)images/ && \
   cp -f $(BASE_DOCUMENT_NAME).css $(1) && \
   mkdir -p $(1)images/ && \
   cp -f images/html/*.png $(1)images/ && \
