--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -5,7 +5,7 @@ HTML_NOCHUNKS_XSL := xsl/html_nochunks.xsl
 FO_XSL := xsl/fo.xsl
 FOP_JAVA_MAX_HEAP_SIZE := 512M
 
-# needed to recognize DejaVuSerif fonts,
+# needed to recognize DejaVu* fonts,
 # needed in turn for Polish chars on titlepage
 FOP_OPTIONS := -c fop/fonts/fop_config.xml
 
