Fix some compilation scripts and Makefiles for new names.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/documentation@14603 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -26,7 +26,7 @@ html_post = mkdir -p $(1)admonitions/ && \
 .PHONY: default
 default: validate-xmllint html pdf
 
-include ../../vrml_engine_doc/Makefile-docbook
+include ../vrml_engine_internals/Makefile-docbook
 
 # upload ---------------------------------------------------------------------
 
