--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -30,23 +30,23 @@ include ../vrml_engine_internals/Makefile-docbook
 
 # upload ---------------------------------------------------------------------
 
-SF_USERNAME=kambi
-SF_HOST=web.sourceforge.net
-SF_PATH=/home/project-web/castle-engine/htdocs/compositing_shaders_doc/
+SSH_USERNAME=michalis
+SSH_HOST=castle-engine.io
+SSH_PATH=/home/michalis/cge-www/htdocs/compositing_shaders_doc/
 
-SF_CONNECT=$(SF_USERNAME),castle-engine@$(SF_HOST):$(SF_PATH)
+SCP_TARGET=$(SSH_USERNAME)@$(SSH_HOST):$(SSH_PATH)
 SCP_OPTIONS=
 
-# Prepare and upload our output under
-# [http://castle-engine.sourceforge.net/compositing_shaders_doc/].
+# Prepare and upload our output to be visible on
+# https://castle-engine.io/compositing_shaders.php
 .PHONY: upload
 upload: clean
 	sed -e 's|<!-- <xsl:import href="html_piwik.xsl"/> -->|<xsl:import href="html_piwik.xsl"/> <!-- enabled -->|' --in-place xsl/html_chunks.xsl
 	$(MAKE) default
 	sed -e 's|<xsl:import href="html_piwik.xsl"/> <!-- enabled -->|<!-- <xsl:import href="html_piwik.xsl"/> -->|' --in-place xsl/html_chunks.xsl
 	cd output/xsl/ && tar czvf ../../output.tar.gz *
-	scp $(SCP_OPTIONS) output.tar.gz $(SF_CONNECT)
-	./sf_upload_finalize.sh $(SF_USERNAME) $(SF_PATH)
+	scp $(SCP_OPTIONS) output.tar.gz $(SCP_TARGET)
+	./upload_finalize.sh $(SSH_USERNAME) $(SSH_HOST) $(SSH_PATH)
 	rm -f output.tar.gz
 # Do not keep HTML version with Piwik enabled on local disk.
 	rm -Rf output/xsl/html/
