Fix ssh uploading commands

--- a/compositing_shaders_doc/Makefile
+++ b/compositing_shaders_doc/Makefile
@@ -31,7 +31,7 @@ include ../vrml_engine_internals/Makefile-docbook
 # upload ---------------------------------------------------------------------
 
 SSH_USERNAME=michalis
-SSH_HOST=castle-engine.io
+SSH_HOST=ssh.castle-engine.io
 SSH_PATH=/home/michalis/cge-www/htdocs/compositing_shaders_doc/
 
 SCP_TARGET=$(SSH_USERNAME)@$(SSH_HOST):$(SSH_PATH)
