--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *~
-vrml_engine_internals/example_models
 vrml_engine_internals/output/
+vrml_engine_internals/castle-engine-output/
+vrml_engine_internals/post_process_html
+vrml_engine_internals/post_process_html.exe
